packages/capetownetc_1/src/components/styles/styles.css
/* ... */
/*
//
//
//
//
//
//
MAIN 
*/

a {
  text-decoration: none !important;
}

body {
  margin: 0px;
  padding: 0px;
  font-family: "Roboto";
  background-color: white !important;
}

.homepage_main_parent_1 {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* padding-top: 30px; */
}

/* 
//
//
//
//
//
//
   ADVERTS */
.ad_text_1 {
  color: gray;
  font-size: small;
  letter-spacing: 1px;
  z-index: 999;
}

.ad_horizontal_parent_1 {
  width: 100%;
  padding: 10px 0px;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  background-color: var(--gray_1);
}

.ad_horizontal_1 {
  width: 100%;
  height: var(--ad_horizontal_height_1);
  max-width: var(--ad_horizontal_width_1);
  border: 1px solid black;
  background-color: var(--ad_gray_1);
  z-index: 999;
}

.ad_vertical_1_ {
  width: var(--ad_vertical_width_1);
}

.ad_vertical_1 {
  border: 1px solid black;
  width: var(--ad_vertical_width_1);
  background-color: var(--ad_gray_1);
  height: var(--ad_vertical_height_1);
  z-index: 999;
  /* display: none; */
}

.ad_horizontal_2_parent {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  background-color: white;
}

.ad_horizontal_2 {
  border: 1px solid black;
  background-color: var(--ad_gray_1);
  width: var(--ad_horizontal_width_2);
  height: var(--ad_horizontal_height_2);
  z-index: 999;
}

.ad_square_1 {
  border: 1px solid black;
  background-color: var(--ad_gray_1);
  width: var(--ad_square_width_1);
  height: var(--ad_square_height_1);
  z-index: 999;
}

/* 
//
//
//
//
//
//
//
  TODAY'S DATE | WEATHER | SOCIAL MEDIA | SUBMIT-YOUR-CONTENT */
.topbar_parent_1 {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: center;
  background-color: white;
  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
}

.topbar_container_1 {
  width: 100%;
  display: flex;
  max-width: var(--maxContentWidth);
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
}

.topbar_date_weather_parent_1 {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: center;
}

.topbar_date_parent_1 > span,
.topbar_weather_parent_1 > span {
  color: gray;
  font-size: 13px;
}

.topbar_weather_parent_1 {
  margin-left: 20px;
}

.topbar_weather_parent_1 > span > svg {
  transform: translateY(2px);
  margin-right: 4px;
}

.topbar_socialLinks_submit_parent_1 {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: center;
}

.topbar_socialLinks_parent_1 {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: center;
}

.topbar_socialLinks_parent_1 > a {
  padding: 6px 7px 3px 7px;
  border-radius: 100px;
  margin-right: 10px;
  color: white;
  font-size: 11px;
}

.topbar_socialLinks_parent_2 > a {
  padding: 5px 5px 2px 5px;
  border-radius: 100px;
  margin-right: 5px;
  color: black;
  font-size: 10px;
}

.social_icon_parent_1 {
  background-color: white !important;
}

.instagram_icon_parent_1 {
  background-color: black !important;
}

.facebook_icon_parent_1 {
  background-color: black !important;
}

.twitter_icon_parent_1 {
  background-color: black !important;
}

.tiktok_icon_parent_1 {
  background-color: black !important;
}

.youtube_icon_parent_1 {
  background-color: black !important;
}

.instagram_icon_parent_2 {
  background-color: #e9338bff !important;
}

.facebook_icon_parent_2 {
  background-color: #36609cff !important;
}

.twitter_icon_parent_2 {
  background-color: #2aa6ddff !important;
}

.tiktok_icon_parent_2 {
  background-color: white !important;
}

.youtube_icon_parent_2 {
  background-color: #ea3437ff !important;
}

.submitYourContent_parent_1 {
  border: 0px;
  padding: 10px;
  color: white;
  font-size: 14px;
  font-weight: 400;
  margin-left: 15px;
  text-decoration: none;
  letter-spacing: -0.2px;
  background-color: var(--pinkish_color);
}

.submitYourContent_parent_1:hover {
  text-decoration: underline;
}

.submitYourContent_iframe_parent_1 {
  width: 60vw !important;
}
/* 
//
//
//
//
//
//
WIDE NAV
*/

.nav_mobile_header_parent_1 {
  display: none;
}

.showMobileMenu {
  display: none;
}

.hideMobileMenu {
  display: none;
}

.nav_parent_1 {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: center;
  background-color: black;
}

.nav_container_1 {
  width: 100%;
  display: flex;
  align-items: flex-end;
  flex-direction: row;
  justify-content: space-between;
  max-width: var(--maxContentWidth);
}

.nav_logo_img_1 {
  width: 250px;
}

.nav_wide_links_span_1 {
  color: white;
  font-size: 12px;
  /* font-weight: bold; */
  font-weight: 500;
  text-transform: uppercase;
}

.nav_wide_placeholder_parent_1 {
  width: 100%;
  padding: 0px 0px 14px 0px;
}

.nav_wide_placeholder_parent_1 > span {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: center;
}

.nav_wide_placeholder_parent_1 > span > span {
  margin-right: 10px;
}

.nav_wide_links_parent_1 {
  width: 60%;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
}

.nav_wide_links_parent_1 > a {
  text-decoration: none;
}

.nav_wide_links_container_1:hover > span {
  color: var(--pinkish_color);
}

.nav_wide_links_container_1 {
  padding: 60px 0px 10px 0px;
  /* margin-right: 20px; */
  position: relative;
  display: flex;
  align-items: flex-end;
  flex-direction: row;
  justify-content: center;
}

.nav_wide_links_active_1 {
  left: 0px;
  height: 4px;
  width: 100%;
  bottom: 0px;
  position: absolute;
  background-color: #ffffff;
}

.nav_search_container_1 {
  width: 20px;
  height: 20px;
  cursor: pointer;
  transform: translateY(-15px);
}

.nav_search_container_1 > img {
  width: 17px;
}
/* ... */

